tests/common/compile-error/01_domain_frame_syntax.fts
@@target typescript

// NEGATIVE TEST: Frame syntax in domain should fail TypeScript compilation
// Expected error: TS1440: Variable declaration not allowed at this location

@@system NegativeTest {
    machine:
        $Ready { }
    domain:
        var count: number = 0
}
